--- a/express-server-user/package.json
+++ b/express-server-user/package.json
@@ -14,6 +14,7 @@
   "author": "Andrew Muliou",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.8.7"
   }
 }
