--- a/express-server-user/package.json
+++ b/express-server-user/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.7",
+    "mkdirp": "^1.0.3",
+    "mongoose": "^5.9.2",
     "multer": "^1.4.2"
   }
 }
