--- a/express-server-user/package.json
+++ b/express-server-user/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "image-size": "^0.8.3",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.3",
